[package]
name = "m0_audio_player"
version = "0.1.0"
edition = "2021"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
panic-persist = "0.3"
feather_m0 = { version = "0.14", features=["rt", "sdmmc", "adalogger"]}
cortex-m = "0.7"
embedded-sdmmc = "0.8"
embedded-hal-bus = "0.2"
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }
numtoa = "0.2.4"
nb = "1.1.0"
#ringbuf = "0.4.7"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
